feat: (09.03.26) Added API for creating confirmation token (#121)